# effects-examples

./: algorithmic_differentiation.ml  clone_is_tricky.ml  delimcc.ml  dune  dyn_wind.ml  dynamic_state.ml  eratosthenes.ml  fringe.ml  generator.ml  import.ml  loop.ml  memo.ml  nim.ml  nondeterminism.ml  pipes.ml  promises.ml  queens.ml  ref.ml  reify_reflect.ml  sched.ml  state.ml  transaction.ml
aio/: aio.ml  dune
callbacks/: bar.ml  dune
mvar/: MVar.ml  MVar.mli  dune  sched.ml  sched.mli
